--- a/astropanel.service
+++ b/astropanel.service
@@ -4,7 +4,7 @@ After=multi-user.target
 
 [Service]
 Type=idle
-User=nobody
+User=astroberry
 ExecStart=/usr/bin/python3 /var/www/astropanel/astropanel.py
 Restart=always
 RestartSec=5
