Fix location source order

--- a/astropanel.conf
+++ b/astropanel.conf
@@ -1,13 +1,7 @@
 [default]
-; If GPS is available in the system set use_gps = yes
-; If not set use_gps = no and set latitude, longitude and elevation
-; Setting use_gps = yes while GPS is not available or
-; errors latitude, longitude and elevation will trigger demo mode.
-; Below configuration assumes you use GPS and if not available
-; coordinates for Warsaw, Poland will be used (demo mode).
-
 latitude = 52.237049
 longitude = 21.017532
 elevation = 0
 city = Warsaw
-alias = Warsaw
+alias = My location
+use_gps = yes
